--- a/cartas.html
+++ b/cartas.html
@@ -32,6 +32,12 @@
             <div id="totalCombinations" class="result-box"></div>
         </div>
     </div>
+
+    <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img01">
+    </div>
+    
     <script src="cartas.js"></script>
 </body>
 </html>
