--- a/cartas.html
+++ b/cartas.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="nav-left">
-            <img src="drawable\arondight_logo.png" alt="Logo" class="logo">
+            <img src="drawable/arondight_logo.png" alt="Logo" class="logo">
             <span class="site-name">Arondight: Sinergia de Cartas</span>
         </div>
         <ul class="nav-right">
@@ -22,10 +22,10 @@
         <section id="introduction" class="introduction">
             <div class="intro-text">
                 <h1>Bem-vindo ao Arondight: Sinergia de Cartas</h1>
-                <p>Descubra as melhores combinações de cartas e otimize sua estratégia, toda a busca se baseia na sinergia que as suas cartas atuais tem com as outras cartas existentes.</p>
+                <p>Descubra as melhores combinações de cartas e otimize sua estratégia, toda a busca se baseia na sinergia que as suas cartas atuais têm com as outras cartas existentes.</p>
             </div>
             <div class="intro-image">
-                <img src="drawable\LENDA.png" alt="Introduction Image">
+                <img src="drawable/LENDA.png" alt="Introduction Image">
             </div>
         </section>
 
