hide seção de resultados no inicio

--- a/cartas.html
+++ b/cartas.html
@@ -48,7 +48,7 @@
             </form>
         </section>
 
-        <section class="results-section">
+        <section class="results-section" style="display:none;">
             <div class="results">
                 <div id="result" class="result-box"></div>
                 <div id="cardImages" class="card-images-container"></div>
